# RAG

./: .env.example  .gitignore  README.md  eval.py  pyproject.toml
data/: eval_set.jsonl  sample_api.txt  sample_gen.txt  sample_retrieval.txt  sample_trace.txt
docs/: architecture.md  design_decisions.md
static/: index.html
tests/: test_api_health.py  test_chunking.py  test_citation_formatter.py  test_eval_smoke.py  test_hybrid_retrieval.py  test_ingest_dedup.py  test_offline_generator.py  test_rrf.py
tracerag/: __init__.py  api.py  chunking.py  citations.py  cli.py  config.py  embeddings.py  generator.py  ingest.py  models.py  retrieval.py  schemas.py  storage.py
